--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,12 +1,52 @@
+# FastAPI
 APP_NAME=H-Life API
 ENVIRONMENT=local
 API_PREFIX=/api
+LOG_LEVEL=INFO
+
+# Database
 DATABASE_URL=postgresql+asyncpg://postgres:postgres@postgres:5432/h_life
+
+# Redis
+REDIS_URL=redis://redis:6379/0
+
+# MinIO / S3
 S3_ENDPOINT_URL=http://minio:9000
 S3_REGION=us-east-1
 S3_BUCKET=h-life-media
 S3_ACCESS_KEY=minioadmin
 S3_SECRET_KEY=minioadmin
 S3_USE_SSL=false
-JWT_SECRET_KEY=super-secret
-ALLOWED_ORIGINS=["http://localhost:3000"]
+
+# JWT
+JWT_SECRET_KEY=change-me
+JWT_ALGORITHM=HS256
+JWT_ACCESS_EXPIRE_MINUTES=30
+JWT_REFRESH_EXPIRE_MINUTES=10080
+
+# AI Providers
+AI_PROVIDER=openai
+OPENAI_API_KEY=sk-test
+LOCAL_AI_ENDPOINT=http://ai:8080/v1
+AI_TIMEOUT_SECONDS=15
+
+# Vision/Pose Models
+POSE_MODEL_PATH=./models/movenet.tflite
+SEGMENTATION_MODEL_PATH=./models/deeplab.onnx
+
+# Notifications
+VAPID_PUBLIC_KEY=demo
+VAPID_PRIVATE_KEY=demo
+FCM_SERVER_KEY=
+
+# Rate Limiting
+RATE_LIMIT_WINDOW_SECONDS=60
+RATE_LIMIT_MAX_REQUESTS=5
+
+# Analytics/Monitoring
+SENTRY_DSN=
+PROMETHEUS_MULTIPROC_DIR=
+
+# CORS
+ALLOWED_ORIGINS=http://localhost:3000,http://127.0.0.1:3000
+ALLOWED_ORIGIN_REGEX=http://192\\.168\\.\d{1,3}\\.\d{1,3}(:\d+)?
